cabal-version:      3.0
name:               yiss
version:            0.1.0.0
synopsis:           Aww yiss!
description:        Your irc servant server bot. Aww yiss.
homepage:           https://github.com/emilypi/yiss
bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Emily Pillmore, Rachel Fish
maintainer:         emilypi@cohomolo.gy
copyright:          BSD-3 Clause
category:           Yiss
extra-source-files:
  CHANGELOG.md
  README.md

tested-with:        GHC ==8.6.5 || ==8.8.3 || ==8.10.1

source-repository head
  type:     git
  location: https://github.com/emilypi/yiss.git

flag ghc-flags
  description: Enable ghc dumps of .ghc.flags and .ghc.version for tooling
  default:     False
  manual:      True

common warning-flags
  ghc-options:
    -Wall -Werror -Wcompat -Wpartial-fields -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Widentities -funclutter-valid-hole-fits
    -fmax-relevant-binds=0

library
  import:           warning-flags
  exposed-modules:  MyLib

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base           >=4.12 && <4.15
    , binary
    , bytestring
    , containers
    , directory
    , edit-distance
    , filepath
    , hashable
    , HTTP
    , lens
    , mtl
    , parsec
    , regex-tdfa
    , text
    , transformers
    , unix

  hs-source-dirs:   src
  default-language: Haskell2010

  if flag(ghc-flags)
    ghc-options:   -fplugin GhcFlags.Plugin
    build-depends: ghcflags

executable yiss
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base                  >=4.12 && <4.15
    , bytestring
    , directory
    , filepath
    , optparse-applicative
    , text
    , unix
    , yiss

  hs-source-dirs:   exe
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts

test-suite yiss-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          MyLibTest.hs
  build-depends:    base ^>=4.13.0.0
